external/dtt-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: dtt-service
  namespace: mf
spec:
  type: ExternalName
  externalName: ashvin-integration.digitaltwin.technology
