external/echo-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo1
spec:
  selector:
    matchLabels:
      app: echo1
  replicas: 2
  template:
    metadata:
      labels:
        app: echo1
    spec:
      containers:
      - name: echo1
        image: brndnmtthws/nginx-echo-headers
        ports:
        - containerPort: 8080
        
---
apiVersion: v1
kind: Service
metadata:
  name: echo-service
spec:
  ports:
  - port: 8112
    targetPort: 8080
  selector:
    app: echo1
