external/dtt-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mf-dtt
  namespace: mf
  annotations:
    nginx.ingress.kubernetes.io/auth-response-headers: 'X-Auth-Request-Access-Token, Authorization'
    nginx.ingress.kubernetes.io/auth-signin: 'https://$host/oauth2/start?rd=$escaped_request_uri'
    nginx.ingress.kubernetes.io/auth-url: 'https://$host/oauth2/auth'
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/proxy-buffer-size: 256k
    nginx.ingress.kubernetes.io/proxy-buffering: 'on'
    nginx.ingress.kubernetes.io/proxy-buffers-number: '4'
    nginx.ingress.kubernetes.io/ssl-passthrough: 'false'
    nginx.ingress.kubernetes.io/upstream-vhost: ashvin-integration.digitaltwin.technology
spec:
  rules:
    - host: iot.ashvin.eu
      http:
        paths:
        - path: /Demo
          pathType: Prefix
          backend:
            service:
              name: dtt-service
              port:
                number: 443
  tls:
  - hosts:
    - iot.ashvin.eu
    secretName: mainflux-server2
