external/echo-header.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/start?rd=$escaped_request_uri"
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/auth-response-headers: 'X-Auth-Request-Access-Token'
  name: echo
spec:
  rules:
  - host: iot.mainflux.tech
    http:
      paths:
      - path: /echo1
        pathType: Prefix
        backend:
          service:
            name: echo1
            port: 
              number: 8080
  tls:
    - hosts:
      - iot.mainflux.tech
      secretName: mainflux-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo1
spec:
  selector:
    matchLabels:
      app: echo1
  replicas: 2
  template:
    metadata:
      labels:
        app: echo1
    spec:
      containers:
      - name: echo1
        image: brndnmtthws/nginx-echo-headers
        ports:
        - containerPort: 8080
        
---
apiVersion: v1
kind: Service
metadata:
  name: echo1
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: echo1
